# xls

./: .bazelrc  MODULE.bazel  WORKSPACE  shell.nix
dependency_support/: initialize_external.bzl  load_external.bzl  pip_requirements.txt
xls/build_rules/: xls_ir_rules.bzl
xls/common/: subprocess_test.cc
xls/delay_model/: build_defs.bzl
xls/dslx/: trait_visitor.h
xls/dslx/frontend/: zip_ast.cc
xls/dslx/type_system_v2/: populate_table_visitor.cc
xls/ir/: BUILD
xls/tools/: ir_minimizer_main_test.py
